[package]
name = "smart-block"
version = "1.0.0"
edition.workspace = true

license.workspace = true

[dependencies]
smart-block-common = { path = "../smart-block-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
] }
clap = { workspace = true, features = ["derive"] }
chrono = "0.4.43"
[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }

[[bin]]
name = "smart-block"
path = "src/main.rs"
